--- a/src/pages/CSV Comparer/CSVHompage.module.css
+++ b/src/pages/CSV Comparer/CSVHompage.module.css
@@ -7,11 +7,10 @@
   margin: 0;
   padding: 0;
   width: 100dvw;
-  height: 100dvh;
   background-image: url("../../assets/images/csvcompare.jpg");
   background-size: cover;
   background-position: center;
 }
 .innerBox {
-  height: 100dvh;
+  /* height: 100dvh; */
 }
