some styling changed

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 .bgImage {
-  background-image: url(./assets/images/homepage.png);
+  background-image: url(./assets/images/uploaderbg.jpg);
   background-position: 50% 0;
   background-size: cover;
   height: auto;
