--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   background-image: url("assets/images/bg-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
 }
 
 .bgImage {
