--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .bgImage {
-  background-image: url(./assets/images/uploaderbg.jpg);
+  background-image: url("assets/images/uploaderbg.jpg");
   background-position: 50% 0;
   background-size: cover;
   height: auto;
