--- a/src/index.css
+++ b/src/index.css
@@ -11,35 +11,35 @@ body {
   background-image: url("assets/images/bg-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
 }
 
 .bgImage {
   background-image: url("assets/images/uploaderbg.jpg");
   background-position: 50% 0;
   background-size: cover;
-  height: auto;
+  height: 100vh;
 }
 a {
   text-decoration: none !important;
 }
 
 .scannerbg {
-  background-image: url(./assets/images/scannerbg.jpg);
+  background-image: url("assets/images/scannerbg.jpg");
   background-position: 50% 0;
   background-size: cover;
   height: auto;
 }
 
 .csvuploader {
-  background-image: url(./assets/images/csvuploaderbg.jpg);
+  background-image: url("assets/images/csvuploaderbg.jpg");
   background-position: 50% 0;
   background-size: cover;
-  height: auto;
+  height: 100vh;
 }
 
 .templatemapping {
-  background-image: url(./assets/images/templatemappingbg.jpg) ;
+  background-image: url("assets/images/templatemappingbg.jpg") ;
   background-position: 50% 0;
   background-size: cover;
   height: auto;
