zoom feature added to the corrected csv

--- a/src/pages/CSV Comparer/Correction.module.css
+++ b/src/pages/CSV Comparer/Correction.module.css
@@ -20,10 +20,9 @@
   height: 100%;
 }
 .imgdiv {
-  width: 100%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
+  /* width: 100%; */
+  /* text-align: center; */
+  /* border: 1px solid black; */
   margin-top: 10px;
 }
 .imgContainer {
