--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ a {
   background-image: url("assets/images/csvuploaderbg.jpg");
   background-position: 50% 0;
   background-size: cover;
-  height: 100vh;
+  height: auto;
 }
 
 .templatemapping {
