Made site responsive

--- a/src/pages/CSV Comparer/CSVHompage.module.css
+++ b/src/pages/CSV Comparer/CSVHompage.module.css
@@ -7,10 +7,11 @@
   margin: 0;
   padding: 0;
   width: 100dvw;
-  height: 100dvh;
+  min-height: 100dvh;
   background-image: url("../../assets/images/csvcompare.jpg");
   background-size: cover;
   background-position: center;
+  padding-bottom: 30px;
 }
 .innerBox {
   /* height: 100dvh; */
